[tool.poetry]
name = "zerolan-data"
version = "1.6.0"
description = ""
authors = ["AkagawaTsurunaki <AkagawaTsurunaki@outlook.com>"]
readme = "README.md"
packages = [{include = "zerolan", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
# If pydantic >= 3.0, document generator will not work!
pydantic = "^2.10.1,<3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
